First "working" version of "website"! more songs, apache in docker, website borrowed from mdn example.

--- a/MusicFormats/src/main/resources/docker/website/index.html
+++ b/MusicFormats/src/main/resources/docker/website/index.html
@@ -17,12 +17,9 @@
       <aside>
         <form>
           <div>
-            <label for="category">Choose a category:</label>
+            <label for="category">Choose a composer:</label>
             <select id="category">
               <option selected>All</option>
-              <option>Vegetables</option>
-              <option>Meat</option>
-              <option>Soup</option>
             </select>
           </div>
           <div>
