Some progress on website, can display composers in dropdown box
added new example response with json query
added some plans on how to rework script

--- a/MusicFormats/src/main/resources/docker/website/index.html
+++ b/MusicFormats/src/main/resources/docker/website/index.html
@@ -17,8 +17,8 @@
       <aside>
         <form>
           <div>
-            <label for="category">Choose a composer:</label>
-            <select id="category">
+            <label for="composer">Choose a composer:</label>
+            <select id="composer">
               <option selected>All</option>
             </select>
           </div>
