Website now uses query and does a new search (via reload) when clicking or pressing enter

--- a/MusicFormats/src/main/resources/docker/website/index.html
+++ b/MusicFormats/src/main/resources/docker/website/index.html
@@ -23,8 +23,8 @@
             </select>
           </div>
           <div>
-            <label for="searchTerm">Enter search term:</label>
-            <input type="text" id="searchTerm" placeholder="e.g. beans">
+            <label for="searchBox">Enter search term:</label>
+            <input type="text" id="searchBox" placeholder="e.g. beans">
           </div>
           <div>
             <button>Filter results</button>
