--- a/MusicFormats/src/main/resources/docker/website/index.html
+++ b/MusicFormats/src/main/resources/docker/website/index.html
@@ -24,7 +24,7 @@
           </div>
           <div>
             <label for="searchBox">Enter search term:</label>
-            <input type="text" id="searchBox" placeholder="e.g. beans">
+            <input type="text" id="searchBox" placeholder="e.g. bach">
           </div>
           <div>
             <button>Filter results</button>
